add: get method and login in swagger
