# src/routes/user.routes.ts
@@ -9,7 +9,7 @@ import UpdateUserController from "../controllers/User/UpdateUser.controller";
 import AuthUser from "../middleware/AuthUser";
 const routes = Router();
 
-routes.get("/users", FindAllUsersController.handle);
+routes.get("/users", AuthUser, FindAllUsersController.handle);
 routes.get("/users/:id", FindOneUserController.handle);
 routes.post("/users", CreateUserController.handle);
 routes.post("/login", LoginUserController.handle);
