# src/swagger.json
@@ -14,5 +14,132 @@
       "url": "http://localhost:3000/",
       "description": "Rota de desenvolvimento"
     }
-  ]
+  ],
+
+  "paths": {
+    "/login": {
+      "post": {
+        "summary": "Logar o usuario logado",
+        "description": "Retorna o token de um usuario",
+        "tags": ["Users"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Users"
+              },
+              "examples": {
+                "Users": {
+                  "value": {
+                    "email": "user@gmail.com",
+                    "password": "123"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "A rota retornou o token de login do usuario com sucesso - OK"
+          },
+          "400": {
+            "description": "Credenciais invalidas"
+          },
+          "500": {
+            "description": "Erro no codigo!!"
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "summary": "Usuarios cadastrados",
+        "description": "Retorna todos os usuarios cadastrados",
+        "tags": ["Users"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "init",
+            "in": "query",
+            "description": "Valor inicial a ser retornado",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Quantidade de registros a serem retornados",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A Rota retornou todos os usuarios com sucesso - OK"
+          },
+          "500": {
+            "description": "Houve um erro ao tentar buscar os usuarios"
+          },
+          "401": {
+            "description": "Token invalido ou não autorizado"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "summary": "Apenas um usuario cadastrado",
+        "description": "Retorna apenas um usuario cadastrado",
+        "tags": ["Users"],
+        "responses": {
+          "200": {
+            "description": "A rota retornou apenas um usuario com sucesso - OK"
+          }
+        }
+      }
+    }
+  },
+
+  "components": {
+    "schemas": {
+      "Users": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "String"
+          },
+          "email": {
+            "type": "String"
+          },
+          "password": {
+            "type": "String"
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  }
 }
